# trader

./: .gitignore  CMakeLists.txt  README.md  compile.sh  requirements.txt
scripts/: A_downloader.py  A_industry.py  debug.py  train.py
scripts/gym_trading_env/utils/: history.py  portfolio.py
src/: A_downloader.py  envapi.cpp  test.py  train.py
src/gym_trading_env/: environments.py  renderer.py
src/gym_trading_env/utils/: charts.py
